Fixed sent mail confirmation

--- a/app/contact/contact.scss
+++ b/app/contact/contact.scss
@@ -47,6 +47,12 @@ h3 {
 	color: darkred;
 }
 
+.succesfulMail {
+	color: green;
+	float: right;
+	margin-right: 2rem;
+}
+
 .buttonArea {
 	float: right;
 	margin-right: 2rem;
