--- a/app/main-frame/main-frame.scss
+++ b/app/main-frame/main-frame.scss
@@ -98,6 +98,7 @@
     }
 }
 
+// -------- Footer styles --------
 #footer {
   font: $kth-font-title;
   background-image: url("app/main-frame/images/footer.svg");
