Added a super simple stupid captcha

--- a/app/contact/contact.scss
+++ b/app/contact/contact.scss
@@ -35,11 +35,7 @@ h3 {
 	margin-left: 1rem;
 }
 
-.msgError {
-	margin-left: 2rem;
-}
-
-.emailError {
+.msgError, .emailError, .captcha {
 	margin-left: 2rem;
 }
 
