Solved annoying error messages every time a search query is executed in find person, added dynamic footer texts, added comments

--- a/app/find-person/find-person.scss
+++ b/app/find-person/find-person.scss
@@ -246,6 +246,7 @@ mark{
 .popup-person-wrapper {
     font-size: 3em;
     margin: 0.75em;
+    min-width: 30rem;
 }
 
 .popup-person-name {
@@ -390,7 +391,7 @@ mark{
 
 #person-table thead th:first-child {
   border: none;
-  min-width: 0;
+  min-width: 1.7rem;
 }
 
 #person-table thead th p {
