--- a/app/find-person/find-person.scss
+++ b/app/find-person/find-person.scss
@@ -226,6 +226,7 @@ mark{
 .popup-wrapper {
     width: 1000px;
     margin: 250px auto;
+    margin-top: 100px;
 }
 
 #popup-content {
@@ -289,7 +290,7 @@ mark{
     font-size: 0.75em;
     color: #000;
     overflow: hidden;
-    max-height: 600px;
+    max-height: 550px;
 }
 
 .popup-person-about p {
