Added error handling

--- a/app/map/styles/map.scss
+++ b/app/map/styles/map.scss
@@ -29,14 +29,10 @@
     z-index:0;
   }
 
-  .legend{
+  .error{
     position: absolute;
-    width:100px;
-    height:100px;
-    z-index:10;
-    background-color: white;
-    bottom:10rem;
-    right:2rem;
+    top:1rem;
+    left:23rem;
   }
 
 }
