--- a/app/main-frame/main-frame.scss
+++ b/app/main-frame/main-frame.scss
@@ -24,7 +24,7 @@
       color: $kth-color-blue;
       font: $kth-font-title;
       font-weight: lighter;
-      font-size: 500%;
+      font-size:5em;
       white-space: nowrap;
     }
   }
