Changed styling of clock after feedback from Daniel, cleaned up find-person.ts

--- a/app/main-frame/main-frame.scss
+++ b/app/main-frame/main-frame.scss
@@ -29,12 +29,15 @@
       white-space: nowrap;
     }
   }
-
   .main-header-clock {
+    width:15%;
     font-size: 1vw;
     align-self: flex-end;
     color: $kth-color-blue;
-    margin-right: 0.5rem;
+    h2{
+      width:100%;
+      text-align: center;
+    }
   }
 }
 
