--- a/app/main-frame/main-frame.scss
+++ b/app/main-frame/main-frame.scss
@@ -22,6 +22,8 @@
     display: flex;
     align-items: center;
     h1 {
+      margin-top:0.48em;
+      margin-bottom:0.48em;
       color: $kth-color-blue;
       font: $kth-font-title;
       font-weight: lighter;
