--- a/app/find-person/find-person.css
+++ b/app/find-person/find-person.css
@@ -43,7 +43,8 @@ mark {
   width: 0; }
 
 #person-header {
-  padding: 2.4em 2.4em 0 2.4em; }
+  padding: 2.4em 2.4em 0 2.4em;
+  position: relative; }
 
 #search-container {
   font-size: 3em;
@@ -51,7 +52,8 @@ mark {
   max-width: 100%;
   display: table-cell;
   border: 1px solid #9a9a9a;
-  line-height: 55px; }
+  line-height: 55px;
+  position: relative; }
 
 #person-search-input {
   width: 480px;
@@ -319,15 +321,12 @@ mark {
   width: 100%; }
 
 #person-table thead th {
+  -webkit-tap-highlight-color: rgba(255, 255, 255, 0);
   font-size: 2em;
   border-top: 1px dotted #111111;
   border-bottom: 1px dotted #111111;
   padding: 0.25em;
   min-width: 156px; }
-
-#person-table thead th:first-child {
-  border: none;
-  min-width: 1.7rem; }
 
 #person-table thead th p {
   float: left;
@@ -343,11 +342,7 @@ mark {
 #firstname, #email, #phone, #title {
   display: none; }
 
-#person-table tr td:first-child {
-  border: none !important;
-  color: #2e7cc0; }
-
-#person-table tr td:nth-child(2), td:nth-child(3) {
+#person-table tr td:first-child, td:nth-child(2), td:nth-child(3) {
   color: #2e7cc0; }
 
 #person-table td {
@@ -357,5 +352,9 @@ mark {
 
 #person-table td img {
   width: 20px; }
+
+.table-wrapper {
+  margin-left: 2.4em;
+  margin-right: 2.4em; }
 
 /*# sourceMappingURL=find-person.css.map */
