--- a/app/map/styles/map.scss
+++ b/app/map/styles/map.scss
@@ -22,8 +22,9 @@
 
   }
    .maps{
+     position:fixed;
     height:55rem;
-    width:100%;
+    width:70%;
     margin:0;
     padding:0;
     z-index:0;
