Minor bug fix in map view, changed the font size of nearby departments in people view

--- a/app/find-person/find-person.scss
+++ b/app/find-person/find-person.scss
@@ -32,13 +32,14 @@
               top:2.4em;
               right:2.4em;
               p{
-                font-size: 200%;
+                font-size: 140%;
+                text-align: left;
               }
               li{
                 text-align: left;
                 color:#2e7cc0;
                 margin-top:0.5em;
-                font-size: 200%;
+                font-size: 140%;
               }
             }
             .search-container {
