--- a/app/map/styles/map.scss
+++ b/app/map/styles/map.scss
@@ -22,8 +22,8 @@
 
   }
    .maps{
-     position:fixed;
-    height:55rem;
+    position:fixed;
+    height:100%;
     width:70%;
     margin:0;
     padding:0;
